# AWAnalysis

./: .cursorrules  .env.example  .gitignore  CURSOR_WORKFLOW.md  LANGFUSE_DASHBOARDS.md  README.md  pyproject.toml  requirements.txt
aw_analysis/: __init__.py  asset_registry.py  config.py  mcp_server.py
aw_analysis/agent/: __init__.py  asset_registry.py  conversation.py  decomposer.py  errors.py  loop.py  orchestration.py  recency.py  trace.py
aw_analysis/cli/: main.py
aw_analysis/client/: __init__.py  anthropic_client.py
aw_analysis/config/: __init__.py  model_config.py  model_pricing.py  settings.py
aw_analysis/data_sources/: __init__.py  coingecko.py  twelvedata.py
aw_analysis/obs/: __init__.py  attributes.py  client.py  emitter.py  shutdown.py
aw_analysis/prompts/: __init__.py  examples.py  system.py  v2_3_0_broken.py  versions.py
aw_analysis/rag/: __init__.py  chunker.py  embedder.py  ingest.py  retriever.py  store.py
aw_analysis/tools/: __init__.py  asset_profile.py  base.py  crypto_price.py  equity_price.py  market_news.py
data/asset_profiles/: alphabet.md  amazon.md  apple.md  avalanche.md  bitcoin.md  cardano.md  chainlink.md  dogecoin.md  ethereum.md  johnson-and-johnson.md  jpmorgan.md  meta.md  microsoft.md  nvidia.md  polkadot.md  polygon.md  ripple.md  solana.md  tesla.md  visa.md
evals/: __init__.py  cli.py
evals/calibration/: __init__.py  bias.py  calibrate_decomposer.py  reference_set.py  run.py
evals/golden/: __init__.py  dataset.py
evals/grader/: __init__.py  deterministic.py  (+2 more)
tests/: test_decomposer.py  test_obs_smoke.py
(+12 files in other folders)
